test_nexp/toy.c
void main () {
int x,y,z;
while( y > z ){ 
    y = y - x;
}
// error
}